--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,11 @@ body {
     font-family: 'Roboto';
 }
 
+#wrapper-container {
+  display: flex;
+  flex-direction: column;
+}
+
 body > div.wrapper {
     width: 100%;
     height: 100%;
@@ -98,6 +103,7 @@ div.main {
 }
 
 .popup-form {
+    /* margin: 1rem; */
     padding: 1rem;
     background-color: lightgreen;
     width: clamp(7rem, 40%, 100%);
