--- a/src/style.css
+++ b/src/style.css
@@ -266,7 +266,7 @@ input[type='checkbox'] {
     text-decoration: line-through;
 }
 
-body.popup-add {
+.popup-add {
     display: flex;
     flex-direction: column;
     background-color: red;
